# ai-doc-generator

./: .gitignore  MANIFEST.in  Makefile  README.md  api-reference.md  config.sample.json  documentation.json  project-overview.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: deploy-docs.yml  manual-publish.yml  publish-on-merge.yml  publish.yml  tests.yml
docs/: ARCHITECTURE.md
modules/src_ai_doc_generator/: index.md
src/ai_doc_generator/: __init__.py  __main__.py  change_tracker.py  cli.py  code_analyzer.py  config.py  doc_builder.py  doc_generator.py  file_scanner.py
tests/: conftest.py  integration_test.py  test_change_tracker.py  test_code_analyzer.py  test_config.py  test_doc_builder.py  test_doc_generator.py  test_scanner.py
